--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ts-workbench",
+    "name": "rxjs-workbench",
     "version": "0.0.1",
     "description": "",
     "main": "index.js",
@@ -40,7 +40,9 @@
         "webpack-cli": "^4.3.1",
         "webpack-dev-server": "^3.11.1"
     },
-    "dependencies": {},
+    "dependencies": {
+        "rxjs": "^6.6.6"
+    },
     "husky": {
         "hooks": {
             "pre-commit": "pretty-quick --staged"
